<resources>
    <string name="app_name">Student Assistant</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="login_now">Login Now</string>
    <string name="don_t_remember_password">Don\'t Remember password?</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="or">or</string>
    <string name="reg_name">Name</string>
    <string name="reg_email">Email</string>
    <string name="reg_password">Password</string>
    <string name="reg_cpassword">Confirm Password</string>
    <string name="reg_register">Register</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="verif_Info">Please Note that Email address should be real not fake</string>
    <string name="verif_header">Verifying Email Address... </string>
    <string name="forgot_pass_hint">Enter the Email Address</string>
    <string name="email_address_valid">Please Note that email Address should be valid!</string>
    <string name="forgot_pass_btn">Reset Password</string>
    <string name="std_info_first_name">First Name</string>
    <string name="std_info_last_name">Last Name</string>
    <string name="std_info_college_name">College Name</string>
    <string name="std_info_next">Next</string>
    <string name="std_info_basic_information">Fill the Information</string>
    <string name="dashboard_head_name">Student Assistant</string>
    <string name="dashboard_info">Welcome</string>
    <string name="timetable">TimeTable</string>
    <string name="syllabus">Syllabus</string>
    <string name="subject">Subject</string>
    <string name="chatroom">Chats</string>
    <string name="faculty">Faculty</string>
    <string name="choose_semester">Choose Semester</string>
    <string name="download_pdf">Download Pdf</string>
    <string name="click_to_download">Click To Specific Year</string>
    <string name="about_icon">About Us</string>
    <string name="college_info">The Main objective of developing StudentAssistant is to help Student  for getting  Information  about  their  Course  where  Most  Student  Finds  difficulty.  The main goal of this  application  is  to  add  Mobility  and  Automation to  the  Process  of  managing  Student  Information  in  an  institute.  Student Assistant provide Feature such as Course Specific  Syllabus,  Notes  for  Subject,  Practical  Pdf with Videos,  Papers  for Practices, Black  Book  Pdf, Providing  Latest  News  from  University,  Blogs for Student, Projects Idea for the Student.</string>
    <string name="fyit">FYIT</string>
    <string name="syit">SYIT</string>
    <string name="tyit">TYIT</string>


    <string-array name="year">
        <item>FYIT</item>
        <item>SYIT</item>
        <item>TYIT</item>

    </string-array>

    <string-array name="faculty_name">
        <item>Sandeep Vishwakarma</item>
        <item>Dipti Parab</item>
        <item>Arvind Singh</item>
        <item>Namrata Dube</item>
        <item>Nitesh Shukla</item>
        <item>Krishnkant Pandey</item>
        <item>Alok Singh</item>

    </string-array>

    <string-array name="faculty_sandeep">
        <item>1234567891</item>
        <item>SandeepVishwakarma01@gmail.com</item>
        <item>B.Sc(Physics),MCA</item>
    </string-array>

    <string-array name="faculty_dipti">
        <item>1234567891</item>
        <item>dipti01@gmail.com</item>
        <item> 	M.Sc (Electronics)</item>
    </string-array>

    <string-array name="faculty_arvind">
        <item>1234567891</item>
        <item>arvind01@gmail.com</item>
        <item>B.Sc(Physics),M.Sc(Comp.Sci)</item>
    </string-array>

    <string-array name="faculty_Namrata">
        <item>1234567891</item>
        <item>Namrata01@gmail.com</item>
        <item>M.Sc in Maths,M.Phil,B.Ed</item>
    </string-array>

    <string-array name="faculty_Nitesh">
        <item>1234567891</item>
        <item>NiteshShukla01@gmail.com</item>
        <item>M.Sc.(I.T.)</item>
    </string-array>

    <string-array name="faculty_Krishnkant">
        <item>1234567891</item>
        <item>KrishnkantPandey01@gmail.com</item>
        <item>BE (IT)</item>
    </string-array>

    <string-array name="faculty_Alok">
        <item>1234567891</item>
        <item>AlokSingh01@gmail.com</item>
        <item>Not Disclose</item>
    </string-array>


    <string name="semester_I">Semester I</string>
    <string name="semester_II">Semester II</string>
    <string name="semester_III">Semester III</string>
    <string name="semester_IV">Semester IV</string>
    <string name="semester_V">Semester V</string>
    <string name="semester_VI">Semester VI</string>


    <string-array name="semester">
        <item>Semester I</item>
        <item>Semester II</item>
        <item>Semester III</item>
        <item>Semester IV</item>
        <item>Semester V</item>
        <item>Semester VI</item>
    </string-array>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_Profile_fragment">profile</string>
    <string name="hello_home_fragment">home</string>
    <string name="hello_setting_fragment">setting</string>
    <string name="sentverificationlink">Send Verification Link</string>
    <string name="email_test_gmail_com">StudentAssistant@gmail.com</string>

    <string-array name="Week">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array>


    <string-array name="Monday">
        <item>Security in Computing</item>
        <item>Geographical Information System</item>
        <item>Break</item>
        <item>ITSM</item>
        <item>Business Intelligence</item>
        <item>Software Quality Assurance</item>
    </string-array>

    <string-array name="Tuesday">
        <item>Security in Computing</item>
        <item>Geographical Information System</item>
        <item>Break</item>
        <item>Software Quality Assurance</item>
        <item>Business Intelligence</item>
        <item>ITSM</item>
    </string-array>

    <string-array name="Wednesday">
        <item>Business Intelligence (Practical Batch - I (1-30))</item>
        <item>Break</item>
        <item>Software Quality Assurance</item>
        <item>ITSM</item>
    </string-array>

    <string-array name="Thursday">
        <item>Business Intelligence (Practical Batch - II)</item>
        <item>Break</item>
        <item>Software Quality Assurance</item>
        <item>Geographical Information System</item>
        <item>ITSM</item>
    </string-array>

    <string-array name="Friday">
        <item>Security in Computing (Practical Batch - I (1-30))</item>
        <item>Break</item>
        <item>Security in Computing</item>
        <item>Advanced Mobile Programming Practical(All Batch)</item>
    </string-array>

    <string-array name="Saturday">
        <item>Security in Computing (Practical Batch - II )</item>
        <item>Break</item>
        <item>Business Intelligence</item>
        <item>Geographical Information System Practical(All Batch)</item>

    </string-array>

    <string-array name="time1">
        <item>7:30AM - 8:18AM</item>
        <item>8:18AM - 9:54AM</item>
        <item>9:54AM - 10:14AM</item>
        <item>10:14AM - 11:02AM</item>
        <item>11:02AM - 11:50AM</item>
        <item>11:50AM - 12:35PM</item>
    </string-array>

    <string-array name="time2">
        <item>7:30AM - 8:18AM</item>
        <item>8:18AM - 9:54AM</item>
        <item>9:54AM - 10:14AM</item>
        <item>10:14AM - 11:02AM</item>
        <item>11:02AM - 11:50AM</item>
        <item>11:50AM - 12:35PM</item>
    </string-array>

    <string-array name="time3">
        <item>7:30AM - 9:54AM</item>
        <item>9:54AM - 10:14AM</item>
        <item>10:14AM - 11:02AM</item>
        <item>11:02AM - 11:50AM</item>

    </string-array>

    <string-array name="time4">
        <item>7:30AM - 9:54AM</item>
        <item>9:54AM - 10:14AM</item>
        <item>10:14AM - 11:02AM</item>
        <item>11:02AM - 11:50AM</item>
        <item>11:50AM - 12:35PM</item>
    </string-array>

    <string-array name="time5">
        <item>7:30AM - 9:54AM</item>
        <item>9:54AM - 10:14AM</item>
        <item>10:14AM - 11:02AM</item>
        <item>11:02AM - 1:26PM</item>
    </string-array>

    <string-array name="time6">
        <item>7:30AM - 9:54AM</item>
        <item>9:54AM - 10:14AM</item>
        <item>10:14AM - 11:02AM</item>
        <item>11:02AM - 1:26PM</item>
    </string-array>

    <string-array name="semester_I_subject">
        <item>Imperative Programming</item>
        <item>Digital Electronics</item>
        <item>Operating System</item>
        <item>Discrete Mathematics</item>
        <item>Communication Skills</item>
    </string-array>


    <string-array name="semester_II_subject">
        <item>Object Oriented Programming</item>
        <item>Microprocessor Architecture</item>
        <item>Web Programming</item>
        <item>Numerical And Statistical Methods</item>
        <item>Green Computing</item>
    </string-array>

    <string-array name="semester_III_subject">
        <item>Python</item>
        <item>Data Structures</item>
        <item>Computer Networks</item>
        <item>Database Management System</item>
        <item>Applied Mathematics</item>
    </string-array>

    <string-array name="semester_IV_subject">
        <item>Core Java</item>
        <item>Introduction to Embedded System</item>
        <item>Computer Oriented Statical Techniques</item>
        <item>Software Engineering</item>
        <item>Computer Graphics and Animation</item>
    </string-array>

    <string-array name="semester_V_subject">
        <item>Software Project Management</item>
        <item>Internet of Things</item>
        <item>Artificial Intelligence</item>
        <item>ASP.NET</item>
        <item>Enterprise Java</item>
    </string-array>


    <string-array name="semester_VI_subject">
        <item>Information Technology Service Management</item>
        <item>Security in Computing</item>
        <item>Business Intelligence</item>
        <item>Geographic Information System</item>
        <item>Software Quality Assurance</item>
    </string-array>


</resources>
